---------------------------------------------------------------------------------------------------
Version: 2.4.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.4.1
Date: 2021-01-02
  Features:
    - Added compatibility with Factory Planner's dimmer frame - RB will now stay in front of it if both GUIs are open at once
  Bugfixes:
    - Fixed RB GUI not coming to the front when opened
    - Fixed that closing RB while pinned would also close whatever GUI happened to be marked as `opened` at the time
---------------------------------------------------------------------------------------------------
Version: 2.4.0
Date: 2021-01-02
  Features:
    - Added crafter page, listing the recipes compatible with that crafter and the fuels it is compatible with
    - Added search by crafter
    - Added `burnable in` to material page, listing the crafters where it can be used as fuel
    - Added descriptions to object tooltips
    - Added fuel values to material tooltips
    - Added session history listing to the navigation button tooltips
    - Pressing enter while in the search textfield will switch search categories
    - When opening the GUI, the home page will be shown instead of the last viewed page (optional)
  Changes:
    - Updated the mod to the new flib `gui-beta` module
    - Removed per-player settings from the mod settings menu - use the mod's built-in settings GUI instead
  Bugfixes:
    - Fixed a crash when an object was added to the favorites list, then removed from the game on configuration changed
    - Fixed that quick reference windows would not update their contents when settings were changed
---------------------------------------------------------------------------------------------------
Version: 2.3.3
Date: 2020-12-06
  Changes:
    - Clicking a crafter to give a blueprint of it will use the blueprint clipboard intead of a one-off item