@@ -22,6 +22,7 @@ blueprint-not-available=A blueprint is not available for this crafter.
 burnable-in-tooltip=This is a list of crafting machines only!
 burnable-in=Burnable in (__1__)  [img=info]
 category=Category:
+click-to-view-required-fluid=Click to view required fluid.
 click-to-view-technology=Click to view on technology screen.
 click-to-view=Click to view details.
 close-quick-reference=Close quick reference panel
@@ -66,6 +67,7 @@ recipe-categories-tooltip=Uncheck a recipe category to hide it from both search 
 recipe-categories=Recipe categories [img=info]
 recipe=Recipe
 remove-from-favorites=Remove from favorites
+required-fluid=Required fluid:
 researching-speed=Researching speed:
 resource=Resource
 results-limited=Results limited to __1__ items
