@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.4.2
 Date: ????
-  Changes:
+  Features:
+    - Added required fluid to resource tooltip
 ---------------------------------------------------------------------------------------------------
 Version: 2.4.1
 Date: 2021-01-02
